# Bloom-Eval

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  UPLOAD_TO_GITHUB.md  pyproject.toml  requirements.txt  run_topic_all_metrics.sh
.github/workflows/: ci.yml
code/: README.md
code/experiment_utils/: autosurvey_reference.py  check_reference_1.py  content.py  convert_for_autosurvey.py  convert_for_surveyforge.py  extract_citations.py  extract_json.py  extract_outline.py  extract_reference_1.py  reference_2_arxiv.py  reference_2_serpapi.py  reference_2_serper.py  reference_2_serper_for_llmv2.py  reference_cite_for_autosurvey.py  semantic_api.py  semantic_scholar.py  surveyforge_reference.py  temp.py
configs/: eval.example.yaml
data/experimental_data/: experimental_topics.csv
data/metadata/: benchmark_summary.json
data/samples/: survey_record.example.json
data/topics/: experimental_topics.csv
docs/: benchmark.md  data_format.md  metrics.md  release_checklist.md  reproducibility.md
examples/: README.md
examples/raw_artifacts/: 10_gram_overlap_report.txt
paper/: README.md
paper/latex/: Explanation_of_Revisions.tex  acl_latex.tex  acl_under_reviewd.tex  custom.bib
prompts/: README.md
prompts/level1/: EFid_entity_extraction.txt  EFid_entity_normalization.txt  EFid_entity_resolution.txt  FCons_claim_extraction.txt  FCons_claim_matching.txt
prompts/level2/: CF_citation_nli.txt  OTC_topic_matching.txt  TFSim_topic_matching.txt
scripts/: check_release.py  common.py  prompt_utils.py
tests/: test_cli.py
(+205 files in other folders)
