[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "bloom-eval"
version = "0.1.0"
description = "Repository scaffold for the Bloom-Eval ASG benchmark."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Fei Zhang" },
]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
bloom-eval = "bloom_eval.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
